[gd_scene load_steps=19 format=1]

[ext_resource path="res://scripts/gui.gd" type="Script" id=1]
[ext_resource path="res://sprites/vignette.png" type="Texture" id=2]
[ext_resource path="res://sprites/bloodoverlay.png" type="Texture" id=3]
[ext_resource path="res://scripts/ui_crosshair.gd" type="Script" id=4]
[ext_resource path="res://scripts/ui_minimap.gd" type="Script" id=5]
[ext_resource path="res://sprites/minimap.png" type="Texture" id=6]
[ext_resource path="res://sprites/overview_bg.png" type="Texture" id=7]
[ext_resource path="res://sprites/overview_mask.png" type="Texture" id=8]
[ext_resource path="res://sprites/viewcone.png" type="Texture" id=9]
[ext_resource path="res://sprites/ui/frame.png" type="Texture" id=10]
[ext_resource path="res://fonts/DroidSans.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://scripts/ui_scoreboard.gd" type="Script" id=12]
[ext_resource path="res://prefabs/ui_sbItem.tscn" type="PackedScene" id=13]

[sub_resource type="Animation" id=1]

resource/name = "start"
length = 1.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1.3, 1.5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 1.0, 0.7, 0.0 ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1.5 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }

[sub_resource type="CanvasItemShader" id=2]

_code = { "fragment":"uniform texture alpha_mask;\n\ncolor diff = tex(TEXTURE, UV).rgba;\ndiff.a *= tex(alpha_mask, UV).r;\n\nCOLOR = diff;", "fragment_ofs":0, "light":"", "light_ofs":0, "vertex":"", "vertex_ofs":0 }

[sub_resource type="CanvasItemMaterial" id=3]

shader/shader = SubResource( 2 )
shader/shading_mode = 0
shader_param/alpha_mask = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]

font/size = 24
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 11 )

[sub_resource type="DynamicFont" id=5]

font/size = 24
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 11 )

[node name="gui" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="ui_inGame" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="fx_vignette" type="TextureFrame" parent="ui_inGame"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="fx_bloodoverlay" type="TextureFrame" parent="ui_inGame"]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.0
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="ui_inGame/fx_bloodoverlay"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/start = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="ui_rayHit" type="Label" parent="ui_inGame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 50.0
margin/bottom = 24.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ui_crosshair" type="Control" parent="ui_inGame"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 4 )
DRAW_DOT = true
DRAW_LINE = true
DRAW_CIRCLE = true

[node name="ui_minimap" type="Control" parent="ui_inGame"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 20.0
margin/right = 200.0
margin/bottom = 200.0
script/script = ExtResource( 5 )

[node name="vp" type="Viewport" parent="ui_inGame/ui_minimap"]

rect = Rect2( 0, 0, 160, 160 )
own_world = true
world = null
transparent_bg = true
render_target/enabled = true
render_target/v_flip = false
render_target/clear_on_new_frame = true
render_target/filter = false
render_target/gen_mipmaps = false
render_target/update_mode = 2
audio_listener/enable_2d = false
audio_listener/enable_3d = false
physics/object_picking = false
gui/disable_input = false

[node name="cam" type="Camera2D" parent="ui_inGame/ui_minimap/vp"]

anchor_mode = 1
rotating = true
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
limit/smoothed = false
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="sprite" type="Sprite" parent="ui_inGame/ui_minimap/vp"]

texture = ExtResource( 6 )

[node name="objects" type="Node2D" parent="ui_inGame/ui_minimap/vp"]

[node name="bg" type="TextureFrame" parent="ui_inGame/ui_minimap"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 0

[node name="tex" type="TextureFrame" parent="ui_inGame/ui_minimap"]

material/material = SubResource( 3 )
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
stretch_mode = 0

[node name="viewcone" type="TextureFrame" parent="ui_inGame/ui_minimap"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 0

[node name="ui_playerInfo" type="Control" parent="ui_inGame"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="health" type="Patch9Frame" parent="ui_inGame/ui_playerInfo"]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 80.0
margin/right = 130.0
margin/bottom = 12.0
texture = ExtResource( 10 )
patch_margin/left = 24
patch_margin/top = 24
patch_margin/right = 24
patch_margin/bottom = 24

[node name="lblHealth" type="Label" parent="ui_inGame/ui_playerInfo/health"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 110.0
margin/bottom = 60.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.300781, 0.590302, 1, 0.710383 )
text = "100"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ammunition" type="Patch9Frame" parent="ui_inGame/ui_playerInfo"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = 80.0
margin/right = 10.0
margin/bottom = 12.0
texture = ExtResource( 10 )
patch_margin/left = 24
patch_margin/top = 24
patch_margin/right = 24
patch_margin/bottom = 24

[node name="lblAmmo" type="Label" parent="ui_inGame/ui_playerInfo/ammunition"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 170.0
margin/bottom = 60.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.300781, 0.590302, 1, 0.710383 )
text = "30/120"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ui_scoreBoard" type="Patch9Frame" parent="ui_inGame"]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 240.0
margin/right = -320.0
margin/bottom = -240.0
texture = ExtResource( 10 )
patch_margin/left = 32
patch_margin/top = 32
patch_margin/right = 32
patch_margin/bottom = 32
script/script = ExtResource( 12 )

[node name="lblTitle" type="Label" parent="ui_inGame/ui_scoreBoard"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 20.0
margin/right = 40.0
margin/bottom = 400.0
custom_fonts/font = SubResource( 5 )
text = "SCORE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="container" type="GridContainer" parent="ui_inGame/ui_scoreBoard"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 80.0
margin/right = 40.0
margin/bottom = 30.0
custom_constants/vseparation = 10
custom_constants/hseparation = 40
columns = 2

[node name="title1" parent="ui_inGame/ui_scoreBoard/container" instance=ExtResource( 13 )]

[node name="title2" parent="ui_inGame/ui_scoreBoard/container" instance=ExtResource( 13 )]

margin/left = 300.0
margin/right = 560.0

[node name="ui_gameManager" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="inIP" type="LineEdit" parent="ui_gameManager"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 30.0
margin/right = 10.0
margin/bottom = 6.0
text = "127.0.0.1"
placeholder/text = "IP"
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="inPort" type="LineEdit" parent="ui_gameManager"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = 30.0
margin/right = -130.0
margin/bottom = 6.0
text = "25444"
placeholder/text = "Port"
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="inName" type="LineEdit" parent="ui_gameManager"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 0.0
margin/right = -130.0
margin/bottom = -24.0
text = "Khai"
placeholder/text = "Name"
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="btnHost" type="Button" parent="ui_gameManager"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = -30.0
margin/right = 10.0
margin/bottom = -60.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Host"
flat = false

[node name="btnConnect" type="Button" parent="ui_gameManager"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = -30.0
margin/right = -130.0
margin/bottom = -60.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Connect"
flat = false

[node name="lblFPS" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 50.0
margin/bottom = 24.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


